# cafetone

./: .gitignore  BUILD_GUIDE.md  FIREBASE_SETUP.md  FIXES_IMPLEMENTED.md  GLOBAL_PROCESSING_IMPLEMENTATION.md  LICENSE  PRIVACY_POLICY.md  README.md  UI_OVERHAUL_COMPLETE.md  bug.txt  build.gradle  document.txt  gradle.properties  gradlew  local.properties.template  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/cafetone/audio/privileged/: IPrivilegedAudioService.aidl
app/src/main/cpp/: CMakeLists.txt  audio_effect.h  audio_processor.cpp  audio_processor.h  binaural_processor.cpp  binaural_processor.h  cafetone_dsp.cpp  dynamic_processor.cpp  dynamic_processor.h  eq_processor.cpp  eq_processor.h  haas_processor.cpp  haas_processor.h  reverb_processor.cpp  reverb_processor.h
app/src/main/java/com/cafetone/audio/: MainActivity.kt
app/src/main/java/com/cafetone/audio/analytics/: AnalyticsManager.kt
app/src/main/java/com/cafetone/audio/dsp/: CafeModeDSP.kt
app/src/main/java/com/cafetone/audio/engagement/: UserEngagementManager.kt
app/src/main/java/com/cafetone/audio/playstore/: PlayStoreIntegration.kt
app/src/main/java/com/cafetone/audio/privileged/: PrivilegedAudioService.kt
app/src/main/java/com/cafetone/audio/receiver/: BootReceiver.kt
app/src/main/java/com/cafetone/audio/service/: AppStatus.kt  CafeModeService.kt  CafeToneMessagingService.kt  CommandUserService.kt  ShizukuIntegration.kt
app/src/main/java/com/cafetone/audio/system/: AudioPolicyManager.kt
app/src/main/java/com/cafetone/audio/test/: CafeToneDiagnostic.kt  GlobalAudioProcessingTest.kt
app/src/main/java/com/cafetone/audio/update/: UpdateManager.kt
app/src/main/privileged/: PrivilegedAudioService.kt
app/src/main/res/anim/: fade_in.xml  fade_out.xml  scale_in.xml  scale_out.xml  slide_in_left.xml  slide_in_right.xml  slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: gradient_background.xml  ic_cafe_active.xml  ic_cafe_inactive.xml  ic_cafe_mode.xml  ic_notification.xml  ic_settings.xml  ic_toggle.xml  ic_warning.xml  status_background.xml  value_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/mipmap-xxxhdpi/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/xml/: audio_effects.xml  backup_rules.xml  data_extraction_rules.xml
gradle/wrapper/: gradle-wrapper.properties
